2008-08-17  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourceview.c (draw_spaces_at_iter): special case
	the end iter.

=== gtksourceview 2.3.1 ===

2008-08-11  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.1

2008-08-11  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c:
	track when the object has been constructed so that we know the 
	tag-table is there and we can check bracket matches etc. 

2008-08-10  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c 
	(gtk_source_buffer_get_source_marks_at_iter):
	do not leak list of marks.

2008-08-10  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac: restore variable used by test-widget that I removed
	by mistake.

2008-08-10  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourceview.c
	(gtk_source_view_paint_line_background):
	destroy cairo context

=== gtksourceview 2.3.0 ===

2008-08-09  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.3.0

2008-08-09  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* Makefile.am:
	Remove conditional switch for tests, it was used to avoid
	gnome-vfs dep on win32, but that's not needed anymore

2008-08-09  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/sh.lang: add tr and df commands

2008-08-09  Paolo Borelli  <paolo.borelli@katamail.com>

	New API: gtk_source_view_[set|get]_draw_spaces, bug #441513.

	* gtksourceview/gtksourceview.h:
	* gtksourceview/gtksourceview.c:
	Allow to draw spaces, tabs and newlines

	* gtksourceview/gtksourcestylescheme.h:
	* gtksourceview/gtksourcestylescheme.c:
	Get the color for drawing spaces

	* tests/test-widget.c: use the new feature.

2008-08-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/c.lang:
	Fixed printf style.

2008-08-05  Yevgen Muntyan  <muntyan@tamu.edu>
