@@ -72,6 +72,7 @@ gtksourceview/language-specs/vbnet.lang
 gtksourceview/language-specs/verilog.lang
 gtksourceview/language-specs/vhdl.lang
 gtksourceview/language-specs/xml.lang
+gtksourceview/language-specs/xslt.lang
 gtksourceview/language-specs/yacc.lang
 gtksourceview/language-specs/classic.xml
 gtksourceview/language-specs/kate.xml
