@@ -1,3 +1,9 @@
+2008-08-27  Paolo Borelli  <paolo.borelli@katamail.com>
+
+	* gtksourceview/language-specs/xslt.lang: add lang file for xslt.
+	* gtksourceview/language-specs/xml.lang: fix match priority bug
+	needed for xslt.
+
 2008-08-17  Paolo Borelli  <paolo.borelli@katamail.com>
 
 	* gtksourceview/gtksourceview.c (draw_spaces_at_iter): special case
